# Huffman-Coding-CSC-401-Project

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  create_cmake_project.cpp
Greedy/: CMakeLists.txt  main.cpp
Greedy/include/huffman/: greedy.hpp
Greedy/src/huffman/: greedy.cpp
Main/: CMakeLists.txt  main.cpp
Naive/: CMakeLists.txt  main.cpp
Naive/include/huffman/: naive.hpp
Naive/src/huffman/: naive.cpp
_tools/: presetgenerator.cpp
include/huffman/: HuffNode.hpp
